--- a/vt/specs/background/animation-1.yaml
+++ b/vt/specs/background/animation-1.yaml
@@ -54,7 +54,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -62,7 +62,7 @@ story:
                     in:
                       animationId: 3lkj289
             - id: line2
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -70,7 +70,7 @@ story:
                     update:
                       animationId: k38df
             - id: line3
-              presentation:
+              actions:
                 background:
                   animations:
                     out:
