--- a/vt/specs/background/animation-2.yaml
+++ b/vt/specs/background/animation-2.yaml
@@ -45,7 +45,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -53,7 +53,7 @@ story:
                     in:
                       animationId: 3lkj289
             - id: line2
-              presentation:
+              actions:
                 background:
                   resourceId: 3ljdasfjlk32
                   resourceType: image
