--- a/vt/specs/background/backgroundId.yaml
+++ b/vt/specs/background/backgroundId.yaml
@@ -27,17 +27,17 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
             - id: line2
-              presentation:
+              actions:
                 background:
                   resourceId: 8a3lkja
                   resourceType: image
             - id: line3
-              presentation:
+              actions:
                 background:
                   resourceId: 3ljdasfjlk32
                   resourceType: image
