--- a/vt/specs/background/layout.yaml
+++ b/vt/specs/background/layout.yaml
@@ -52,7 +52,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: j3i8dk32
                   resourceType: layout
