--- a/vt/specs/character/animation-1.yaml
+++ b/vt/specs/character/animation-1.yaml
@@ -82,7 +82,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -99,7 +99,7 @@ story:
                         in:
                           animationId: slide_in
             - id: line2
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -116,7 +116,7 @@ story:
                         update:
                           animationId: scale_update
             - id: line3
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
