--- a/vt/specs/character/animation-2.yaml
+++ b/vt/specs/character/animation-2.yaml
@@ -112,7 +112,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -129,7 +129,7 @@ story:
                         in:
                           animationId: slide_in_left
             - id: line2
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
@@ -153,7 +153,7 @@ story:
                         in:
                           animationId: slide_in_right
             - id: line3
-              presentation:
+              actions:
                 background:
                   resourceId: 8a3lkja
                   resourceType: image
@@ -180,7 +180,7 @@ story:
                         in:
                           animationId: slide_in_left
             - id: line4
-              presentation:
+              actions:
                 background:
                   resourceId: 8a3lkja
                   resourceType: image
