--- a/vt/specs/dialogue/basic.yaml
+++ b/vt/specs/dialogue/basic.yaml
@@ -20,7 +20,7 @@ resources:
           fill: "#000000"
           clickEventName: "system"
           clickEventPayload:
-            system:
+            actions:
               nextLine: {}
     fi3l:
       name: Dialogue Screen
@@ -66,7 +66,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 screen:
                   resourceId: storyScreenLayout
                   resourceType: layout
@@ -75,17 +75,17 @@ story:
                   content: Hello! Welcome to this visual novel.
                   characterId: ajf34a
             - id: line2
-              presentation: {}
+              actions: {}
             - id: line3
-              presentation:
+              actions:
                 dialogue:
                   content: Here we are on the third line. The dialogue system is working!
             - id: line4
-              presentation:
+              actions:
                 dialogue:
                   characterId: ajf34a
             - id: line5
-              presentation:
+              actions:
                 dialogue:
                   content: Hello! Welcome to this visual novel.
                   characterId: ajf34a
