--- a/vt/specs/layout/basic.yaml
+++ b/vt/specs/layout/basic.yaml
@@ -57,6 +57,6 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 layout:
                   layoutId: j3i8dk32
