--- a/vt/specs/sectionTransition/basic.yaml
+++ b/vt/specs/sectionTransition/basic.yaml
@@ -31,24 +31,24 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: alkejf3la
                   resourceType: image
             - id: line2
-              system:
+              actions:
                 sectionTransition:
                   sectionId: 3k3s9sd
         3k3s9sd:
           name: Section 2
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: 8a3lkja
                   resourceType: image
             - id: line2
-              system:
+              actions:
                 sectionTransition:
                   sceneId: scene2
                   sectionId: s2s1
@@ -60,12 +60,12 @@ story:
           name: Section 1 Scene 2
           lines:
             - id: line1
-              presentation:
+              actions:
                 background:
                   resourceId: img3
                   resourceType: image
             - id: line2
-              system:
+              actions:
                 sectionTransition:
                   sceneId: ajfl3a
                   sectionId: 3k3s9sd
