--- a/vt/specs/visual/transform.yaml
+++ b/vt/specs/visual/transform.yaml
@@ -30,7 +30,7 @@ story:
           name: Section 1
           lines:
             - id: line1
-              presentation:
+              actions:
                 visual:
                   items:
                     - id: visual-1
@@ -38,7 +38,7 @@ story:
                       resourceType: visual
                       transformId: iasdlf
             - id: line2
-              presentation:
+              actions:
                 visual:
                   items:
                     - id: visual-1
