--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -319,27 +319,80 @@ resources:
                   direction: horizontal
                   gap: 20
                   children:
-                    $for item, i in variables.savePages.items:
-                      - id: id-${item.label}
-                        type: text
-                        text: "${item.label}"
-                        width: 80
-                        $if i == variables.currentSavePageIndex:
-                          style:
-                            fontSize: 48
-                            fill: "yellow"
-                        $else:
-                          style:
-                            fontSize: 48
-                            fill: "white"
-                          eventName: "system"
-                          eventPayload:
-                            actions:
-                              updateVariable:
-                                operations:
-                                  - variableId: "currentSavePageIndex"
-                                    op: "set"
-                                    value: "${i}"
+                    - id: page-prev
+                      type: text
+                      text: "<"
+                      width: 80
+                      $if variables.currentSavePageIndex > 0:
+                        style:
+                          fontSize: 48
+                          fill: "white"
+                        hoverStyle:
+                          fontSize: 48
+                          fill: "yellow"
+                        eventName: "system"
+                        eventPayload:
+                          actions:
+                            updateVariable:
+                              operations:
+                                - variableId: "currentSavePageIndex"
+                                  op: "decrement"
+                                  min: 0
+                      $else:
+                        style:
+                          fontSize: 48
+                          fill: "#ccc"
+                    # TODO: how to make it work without adding nextra container
+                    - id: save-container-page-nums-container
+                      type: container
+                      direction: horizontal
+                      gap: 20
+                      width: 900
+                      children:
+                        $for item, i in variables.savePages.items:
+                          - id: id-${item.label}
+                            type: text
+                            text: "${item.label}"
+                            width: 80
+                            $if i == variables.currentSavePageIndex:
+                              style:
+                                fontSize: 48
+                                fill: "yellow"
+                            $else:
+                              style:
+                                fontSize: 48
+                                fill: "white"
+                              eventName: "system"
+                              eventPayload:
+                                actions:
+                                  updateVariable:
+                                    operations:
+                                      - variableId: "currentSavePageIndex"
+                                        op: "set"
+                                        value: "${i}"
+                    - id: page-next
+                      type: text
+                      text: ">"
+                      width: 80
+                      $if variables.currentSavePageIndex < 8:
+                        style:
+                          fontSize: 48
+                          fill: "white"
+                        hoverStyle:
+                          fontSize: 48
+                          fill: "yellow"
+                        eventName: "system"
+                        eventPayload:
+                          actions:
+                            updateVariable:
+                              operations:
+                                - variableId: "currentSavePageIndex"
+                                  op: "increment"
+                                  max: 8
+                      $else:
+                        style:
+                          fontSize: 48
+                          fill: "#ccc"
         - id: menu-container
           direction: vertical
           gap: 20
